--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Así se hace en TIVIT by HTML5 UP
+	Así se hace en TIVIT DEMO by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Así se hace en TIVIT by HTML5 UP</title>
+		<title>Así se hace en TIVIT DEMO by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -21,7 +21,7 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Así se hace en TIVIT</h1>
+							<h1>Así se hace en TIVIT DEMO</h1>
 							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
